--- a/hilt/app/build.gradle
+++ b/hilt/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
 }
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
 android {
     compileSdk 32
 
@@ -14,8 +18,8 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "LEAGUE_OF_LEGEND_API_KEY", properties['LEAGUE_OF_LEGEND_API_KEY']
     }
 
     buildTypes {
@@ -75,5 +79,6 @@ dependencies {
 
     // hilt
     implementation "com.google.dagger:hilt-android:2.28-alpha"
+    implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01'
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 }
