--- a/hilt/build.gradle
+++ b/hilt/build.gradle
@@ -2,12 +2,13 @@
 buildscript {
     ext {
         kotlin_version = "1.4.32"
-        nav_version = "2.3.2"
+        nav_version = "2.4.1"
         lifecycle_version = "2.2.0"
         retrofit_version = "2.9.0"
         coroutine_version = "1.3.9"
         glide_version = "4.12.0"
         room_version = "2.3.0"
+        hilt_version = "2.41"
     }
     repositories {
         google()
@@ -16,13 +17,13 @@ buildscript {
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.28-alpha'
     }
 }
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.google.dagger.hilt.android' version "$hilt_version" apply false
 }
 
 allprojects {
