--- a/hilt/app/build.gradle
+++ b/hilt/app/build.gradle
@@ -75,7 +75,8 @@ dependencies {
 
     // Room
     implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+//    kapt "androidx.room:room-compiler:$room_version"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
