--- a/DynamicRecyclerView/app/build.gradle
+++ b/DynamicRecyclerView/app/build.gradle
@@ -6,20 +6,17 @@ plugins {
     id 'dagger.hilt.android.plugin'
 }
 
-Properties properties = new Properties()
-properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.hlit_ex"
+        applicationId "com.example.dynamicrecyclerview"
         minSdk 21
         targetSdk 32
         versionCode 1
         versionName "1.0"
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField "String", "LEAGUE_OF_LEGEND_API_KEY", properties['LEAGUE_OF_LEGEND_API_KEY']
     }
 
     buildTypes {
@@ -44,10 +41,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -72,11 +67,6 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-
-    // Room
-    implementation "androidx.room:room-ktx:$room_version"
-//    annotationProcessor "androidx.room:room-compiler:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
 
     // Hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
