--- a/DynamicRecyclerView/app/build.gradle
+++ b/DynamicRecyclerView/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
     id 'dagger.hilt.android.plugin'
+    id 'kotlin-android-extensions'
+
 }
 
 android {
@@ -35,6 +37,8 @@ android {
     buildFeatures {
         dataBinding = true
     }
+    androidExtensions { experimental = true }
+
 }
 
 dependencies {
